; ModuleID = '/home/carl/AnghaBench/esp-idf/examples/bluetooth/bluedroid/ble/ble_spp_server/main/extr_ble_spp_server_demo.c_print_write_buffer.c'
source_filename = "/home/carl/AnghaBench/esp-idf/examples/bluetooth/bluedroid/ble/ble_spp_server/main/extr_ble_spp_server_demo.c_print_write_buffer.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { %struct.TYPE_3__* }
%struct.TYPE_3__ = type { %struct.TYPE_3__*, i32, i64 }

@SppRecvDataBuff = common dso_local global %struct.TYPE_4__ zeroinitializer, align 8
@temp_spp_recv_data_node_p1 = common dso_local global %struct.TYPE_3__* null, align 8
@UART_NUM_0 = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @print_write_buffer to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @print_write_buffer() #0 {
  %1 = load %struct.TYPE_3__*, %struct.TYPE_3__** getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @SppRecvDataBuff, i32 0, i32 0), align 8
  store %struct.TYPE_3__* %1, %struct.TYPE_3__** @temp_spp_recv_data_node_p1, align 8
  br label %2

2:                                                ; preds = %5, %0
  %3 = load %struct.TYPE_3__*, %struct.TYPE_3__** @temp_spp_recv_data_node_p1, align 8
  %4 = icmp ne %struct.TYPE_3__* %3, null
  br i1 %4, label %5, label %18

5:                                                ; preds = %2
  %6 = load i32, i32* @UART_NUM_0, align 4
  %7 = load %struct.TYPE_3__*, %struct.TYPE_3__** @temp_spp_recv_data_node_p1, align 8
  %8 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %7, i32 0, i32 2
  %9 = load i64, i64* %8, align 8
  %10 = inttoptr i64 %9 to i8*
  %11 = load %struct.TYPE_3__*, %struct.TYPE_3__** @temp_spp_recv_data_node_p1, align 8
  %12 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %11, i32 0, i32 1
  %13 = load i32, i32* %12, align 8
  %14 = call i32 @uart_write_bytes(i32 %6, i8* %10, i32 %13)
  %15 = load %struct.TYPE_3__*, %struct.TYPE_3__** @temp_spp_recv_data_node_p1, align 8
  %16 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %15, i32 0, i32 0
  %17 = load %struct.TYPE_3__*, %struct.TYPE_3__** %16, align 8
  store %struct.TYPE_3__* %17, %struct.TYPE_3__** @temp_spp_recv_data_node_p1, align 8
  br label %2

18:                                               ; preds = %2
  ret void
}

declare dso_local i32 @uart_write_bytes(i32, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
